# memchr-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  memchr.rs  memchr2.rs
